--- a/templates/storage/storage.html
+++ b/templates/storage/storage.html
@@ -9,24 +9,19 @@
     <!-- Home Button -->
     <a href="{% url 'home' %}">Home</a>
 &nbsp;&nbsp;
-{% if perms.storage.view_formula %}
-    <!-- Formulas Button -->
-    <a href="{% url 'formulas' %}">Formulas</a>
-{% endif %}
+
+    <a href="{% url 'lab' %}">Lab</a>
 
 <br><br><br><br>
 {% if perms.storage.view_item %}
-<a href="{% url 'storage-items' %}">Items</a>
+<a href="{% url 'storage-items' %}">Stock</a>
 {% endif %}
     &nbsp;&nbsp;
 {% if perms.storage.view_batch %}
 <a href="{% url 'storage-batches' %}">Batches</a>
 {% endif %}
     &nbsp;&nbsp;
-{% if perms.storage.view_raw %}
-<a href="{% url 'storage-raws' %}">Raw Materials</a>
-{% endif %}
-
+<a href="{% url 'add_location' %}">Locations</a>
 
 
 </body>
