--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
-    <h2>Login</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Login · Delice{% endblock %}
+
+{% block content %}
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card p-4">
+        <h1 class="h4 page-title mb-3">Sign in</h1>
+        <form method="POST" class="vstack gap-3">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit" class="btn btn-dark w-100">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+{% endblock %}
