--- a/templates/analytics/analytics.html
+++ b/templates/analytics/analytics.html
@@ -1,22 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Analytics</title>
-</head>
-<body>
-    <a href="{% url 'home' %}">Home</a>
-&nbsp;
-    {% if perms.analytics.add_financialentry%}
-    <a href="{% url 'inputs' %}"> Inputs</a>
-    {% endif %}
-&nbsp;
+{% extends "base.html" %}
 
-    {% if user.is_superuser %}
-        <a href="{% url 'outputs' %}"> Outputs </a>
-    &nbsp;<br><br>
-        <a href="{% url 'analytics-table' %}"> Financial Dashboard </a>&nbsp;
-        <a href="{% url 'reports' %}">Reports</a>
-    {% endif %}
-</body>
-</html>
+{% block title %}Analytics · Delice{% endblock %}
+
+{% block content %}
+  <div class="card p-4">
+    <div class="d-flex align-items-center justify-content-between flex-wrap gap-2">
+      <div>
+        <h1 class="h4 page-title mb-1">Analytics</h1>
+        <div class="text-muted">Financial entries, inputs/outputs, and reports.</div>
+      </div>
+      <div class="d-flex gap-2">
+        {% if perms.analytics.add_financialentry %}
+          <a class="btn btn-dark btn-sm" href="{% url 'inputs' %}">Add income</a>
+        {% endif %}
+        {% if user.is_superuser %}
+          <a class="btn btn-outline-dark btn-sm" href="{% url 'outputs' %}">Add expense</a>
+        {% endif %}
+      </div>
+    </div>
+
+    <hr class="my-3" />
+
+    <div class="d-flex flex-wrap gap-2">
+      {% if user.is_superuser %}
+        <a class="btn btn-light" href="{% url 'analytics-table' %}">Financial dashboard</a>
+        <a class="btn btn-light" href="{% url 'reports' %}">Reports</a>
+      {% endif %}
+    </div>
+  </div>
+{% endblock %}
